fixed gaps between the forms

--- a/style.css
+++ b/style.css
@@ -108,8 +108,9 @@ body {
 
 .sign-up-row {
     display: flex;
-    gap: 60px;
+    justify-content: flex-start;
     margin-bottom: 20px;
+    gap: 10px 60px;
     flex-wrap: wrap;
     
 }
